[tool.poetry]
name = "comic-maker"
version = "0.1.0"
description = ""
authors = ["TuTanK5"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 180
lint.select = [  # https://beta.ruff.rs/docs/rules
  "A",      # flake8-builtins
  "ARG",    # flake8-unused-arguments
  "ASYNC",  # flake8-async
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "C90",    # McCabe cyclomatic complexity
  "DTZ",    # flake8-datetimez
  "E",      # pycodestyle
  "EM",     # flake8-errmsg
  "EXE",    # flake8-executable
  "F",      # Pyflakes
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "INP",    # flake8-no-pep420
  "INT",    # flake8-gettext
  "N",      # pep8-naming
  "NPY",    # NumPy-specific rules
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # Pylint
  "PYI",    # flake8-pyi
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules
  "S",      # flake8-bandit
  "SIM",    # flake8-simplify
  "SLF",    # flake8-self
  "T10",    # flake8-debugger
  "TD",     # flake8-todos
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # pycodestyle
  "YTT",    # flake8-2020
  "ANN",    # flake8-annotations  
  "COM",    # flake8-commas
  "D",      # pydocstyle 
  "DJ",     # flake8-django
  "ERA",    # eradicate
  "FBT",    # flake8-boolean-trap
  "ISC",    # flake8-implicit-str-concat 
  "PD",     # pandas-vet
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "Q",      # flake8-quotes
  "RET",    # flake8-return  
  "TCH",    # flake8-type-checking
  "TRY",    # tryceratops
]
output-format = "full"
target-version = "py312"
exclude = [
  "tests",
  ]
lint.ignore = [
  "D203",
  "D202",
  "D212",
  "D407",
  "PTH123", # pathlib-open - this would force pathlib usage anytime open or with open was used.
  "C901",
  "PLR0911",
  "PD002",
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "first-party", "third-party", "local-folder"]